--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -13,7 +13,8 @@ else if (found is false)
 }
 else
 {
-    <div class="prose prose-sm sm:prose-base xl:prose-lg dark:prose-invert 
+    <div class="prose prose-sm 
+                sm:prose-base lg:prose-lg dark:prose-invert 
                 markdown" >
             @((MarkupString)content)
     </div>
