--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -13,9 +13,8 @@ else if (found is false)
 }
 else
 {
-    <div class="prose prose-sm 
-                sm:prose-base lg:prose-lg dark:prose-invert 
-                markdown" >
+    <div class="prose prose-base sm:prose-lg lg:prose-2xl dark:prose-invert
+                markdown" > 
             @((MarkupString)content)
     </div>
 } 
