--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -13,7 +13,7 @@ else if (found is false)
 }
 else
 {
-    <div class="prose prose-base sm:prose-lg lg:prose-2xl dark:prose-invert
+    <div class="prose prose-base md:prose-lg xl:prose-2xl dark:prose-invert
                 markdown" > 
             @((MarkupString)content)
     </div>
