--- a/Source/Components/DarkSwitch/DarkSwitch.razor.css
+++ b/Source/Components/DarkSwitch/DarkSwitch.razor.css
@@ -1,10 +1,11 @@
 .theme-knob {
-  @apply h-5 w-5 rounded-full top-2 left-2 mt-0.5 ml-0.5;
-  @apply bg-gray-200 dark:bg-gray-900;
+  @apply h-[20px] w-[20px] rounded-full top-[2px] left-[2px];
+  @apply bg-[rgb(229,231,235)] dark:bg-[rgb(17,24,39)];
 
-  @apply transition-all delay-75 duration-300;
+  @apply transition-transform duration-200 ease-linear;
 
-  @apply ring-blue-600/95;
+  /* @apply ring-[color:rgb(37,99,235/0.95)]; */
+  @apply ring-[color:rgb(37_99_235/0.95)];
 
   @apply group-hover:ring-2 group-hover:scale-110;
   @apply group-focus:ring-2 group-focus:scale-110;
