padding moved from DarkSwitch

--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -21,7 +21,9 @@
             </svg>
         </a>
 
-        <DarkSwitch />
+        <div class="px-4">
+            <DarkSwitch />
+        </div>
 
     </div>
 
