--- a/Source/Pages/Markdown.nested.css
+++ b/Source/Pages/Markdown.nested.css
@@ -9,9 +9,6 @@
 
   a {
     @apply text-link-blue no-underline;
-    &.tech {
-      @apply text-2xl italic font-extrabold;
-    }
   }
 
   .info {
@@ -30,34 +27,18 @@
     }
   }
 
-  /* td {
-      @apply align-middle;
-    } */
-
   code {
 
     @apply whitespace-pre-wrap;
     /* more like ohmyposh.dev, less like tailwindcss.com */
     @apply before:!content-none after:!content-none;
 
-    &:not(pre *, .pre *) {
+    &:not(pre *) {
       @apply bg-zinc-200/50 dark:bg-zinc-700/60;
 
       @apply px-1 py-px rounded-[4px];
     }
   }
-
-  abbr {
-    @apply cursor-pointer;
-  }
-
-  /* details {
-    @apply p-2 m-2 rounded-md shadow-sm shadow-dotnet-blurple;
-
-    & summary {
-      @apply text-xl font-bold italic cursor-pointer;
-    }
-  } */
 
   img {
     @apply m-auto bg-neutral-400 rounded-md;
