--- a/Source/Pages/Markdown.nested.css
+++ b/Source/Pages/Markdown.nested.css
@@ -1,7 +1,7 @@
 .markdown {
   @apply pb-8 sm:pb-14 md:pb-20;
   @apply max-w-3xl 2xl:max-w-4xl;
-  @apply transition-[font-size,width];
+  @apply transition-all duration-300;
 
   .emoji {
     @apply inline font-normal text-[120%];
