put ContentProviders in namespace

--- a/Source/_Imports.razor
+++ b/Source/_Imports.razor
@@ -11,4 +11,5 @@
 @using TailBlazor
 @using TailBlazor.Pages
 @using TailBlazor.Components
+@using TailBlazor.ContentProviders
 @using TailBlazor.Layouts
