--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -44,22 +44,23 @@
 
 </div>
 
+@* hamburger *@
 <div class="absolute bottom-4 right-8
             sm:hidden 
-            w-14 h-14  
+            w-12 h-12  
             !bg-blue-500/50 rounded-full shadow-2xl shadow-black">
-    <button @onclick="ToggleNavMenu" class="relative w-14 h-14" >
-        <svg class="transition-opacity  absolute top-2 left-2 w-10 h-10 
+    <button @onclick="ToggleNavMenu" class="relative w-12 h-12" >
+        <svg class="transition-opacity  absolute top-2 left-2 w-8 h-8 
                 @(hidden?"opacity-100 duration-700":"opacity-0 duration-50")" fill="none" 
                 
             stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7"></path></svg>
-        <svg class="transition-opacity absolute top-2 left-2 w-10 h-10 
+        <svg class="transition-opacity absolute top-2 left-2 w-8 h-8 
                 @(hidden?"opacity-0  duration-50":"opacity-100 duration-700")" fill="none" 
                 
             stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
     </button>
 </div>
-
+@* / hamburger *@
 
 
 @code 
