fix top nav at h-14 fixes #117

--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -6,7 +6,8 @@
 
 <div class="grid grid-cols-[min-content,auto] grid-rows-[min-content,auto] h-full @debug">
 
-    <div class="col-span-2 flex flex-row pl-6 pr-2 h-10 sm:h-14
+    @* top nav *@
+    <div class="col-span-2 flex flex-row pl-6 pr-2 h-14
                 items-center
                 self-center justify-between
                 border-b border-neutral-300 dark:border-0
@@ -26,6 +27,7 @@
         </div>
 
     </div>
+    @* / top nav *@
 
     <div class="@nav pt-6
                 border-r-2 border-neutral-300 dark:border-neutral-600" >
