--- a/Source/Pages/Markdown.nested.css
+++ b/Source/Pages/Markdown.nested.css
@@ -31,7 +31,7 @@
 
   code {
 
-    @apply whitespace-pre-wrap;
+    @apply whitespace-pre-wrap font-medium;
     /* more like ohmyposh.dev, less like tailwindcss.com */
     @apply before:!content-none after:!content-none;
 
