--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -2,7 +2,9 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 
 @inherits LayoutComponentBase
-@inject NavigationManager navManager
+@* @inject NavigationManager navManager *@
+
+<AnchorNavigationHook />
 
 <div class="grid grid-cols-[min-content,auto] grid-rows-[min-content,auto] h-full @debug">
 
