add scroll to top back in

--- a/Source/Components/AnchorNavigationHook/AnchorNavigationHook.razor
+++ b/Source/Components/AnchorNavigationHook/AnchorNavigationHook.razor
@@ -61,5 +61,10 @@
                 await module.InvokeAsync<string>("scrollToId", elementId);
             }
         }
+        else
+        {
+            // empty string == scroll to top
+            await module.InvokeAsync<string>("scrollToId", "");
+        }
     }
 }
