--- a/Source/Layouts/MainLayout.razor
+++ b/Source/Layouts/MainLayout.razor
@@ -4,7 +4,7 @@
 @inherits LayoutComponentBase
 @* @inject NavigationManager navManager *@
 
-<AnchorNavigationHook />
+<AnchorNavigationHook OnLocationChanged=@(_ => hidden = true) />
 
 <div class="grid grid-cols-[min-content,auto] grid-rows-[min-content,auto] h-full @debug">
 
@@ -45,11 +45,13 @@
 
     </div>
 
-    <div id="body" class="w-full h-full pt-8
-                            pl-2 pr-4 sm:px-6 md:px-10 lg:px-16 xl:px-24
-                            transition-[padding]
-                            overflow-x-hidden overflow-y-auto
-                            scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200">
+    <div id="body"
+         @onclick=@(_ => hidden = true) 
+         class="w-full h-full pt-8
+                pl-2 pr-4 sm:px-6 md:px-10 lg:px-16 xl:px-24
+                transition-[padding]
+                overflow-x-hidden overflow-y-auto
+                scrollbar-thin !scrollbar-thumb-neutral-400 !scrollbar-track-neutral-200">
         @Body
     </div>
 
@@ -59,7 +61,7 @@
 <div class="absolute bottom-4 right-8
             sm:hidden 
             w-12 h-12  
-            !bg-blue-500/50 rounded-full shadow-2xl shadow-black">
+            !bg-blue-600/80 rounded-full shadow-2xl shadow-black">
     <button @onclick="ToggleNavMenu" class="relative w-12 h-12" >
         <svg class="transition-opacity  absolute top-2 left-2 w-8 h-8 
                 @(hidden?"opacity-100 duration-700":"opacity-0 duration-50")" fill="none" 
