--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -11,7 +11,7 @@ else if (found is false)
 }
 else
 {
-    <div class="prose prose-base md:prose-lg 2xl:prose-xl dark:prose-invert
+    <div class="prose prose-sm md:prose-base lg:prose-lg 2xl:prose-xl dark:prose-invert
                 markdown" > 
             @((MarkupString)content)
     </div>
