--- a/Source/Pages/Markdown.nested.css
+++ b/Source/Pages/Markdown.nested.css
@@ -10,12 +10,15 @@
   a {
     @apply text-link-blue;
   }
-
+  .content{
+    @apply pl-2 pr-4 sm:px-6 lg:px-10 xl:px-12 2xl:px-16
+           transition-[padding];
+  }
   .nav
   {
-    @apply hidden xl:block absolute right-16 h-min;
+    @apply hidden xl:block absolute right-16 h-min w-44;
     @apply border-l border-neutral-300 dark:border-neutral-600;
-    @apply text-base;
+    @apply text-[0.93rem] font-extralight leading-loose;
     @apply pl-4;
     
     p, li { @apply my-0 py-0; }
