--- a/Source/Layouts/NavLinks.razor
+++ b/Source/Layouts/NavLinks.razor
@@ -1,7 +1,7 @@
 <div class="w-44 md:w-48 lg:w-52 
             pr-2 pl-2 sm:pl-4 md:pl-6 lg:pl-8
             transition-[width,padding]">
-    
+
     <IconLink Text="overview" Link="/" Large=true>
         <svg fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
     </IconLink>
@@ -33,9 +33,9 @@
         <svg  fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 5a1 1 0 011-1h14a1 1 0 011 1v2a1 1 0 01-1 1H5a1 1 0 01-1-1V5zM4 13a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H5a1 1 0 01-1-1v-6zM16 13a1 1 0 011-1h2a1 1 0 011 1v6a1 1 0 01-1 1h-2a1 1 0 01-1-1v-6z"></path></svg>
     </IconLink>
 
-    @* <IconLink Text="about" Link="about" Large=true>
+    <IconLink Text="readme" Link="readme" Large=true>
         <svg  fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-    </IconLink> *@
+    </IconLink>
 
 
 </div>
