--- a/Source/Pages/Markdown.razor
+++ b/Source/Pages/Markdown.razor
@@ -12,7 +12,7 @@ else if (found is false)
 else
 {
     <div class="prose prose-sm md:prose-base lg:prose-lg 2xl:prose-xl dark:prose-invert
-                markdown" > 
+                max-w-none markdown" > 
             @((MarkupString)content)
     </div>
 }
