--- a/Blit/src/elements/icon-link/icon-link.css
+++ b/Blit/src/elements/icon-link/icon-link.css
@@ -10,11 +10,11 @@
   }
 
 }
-::deep a {
+a {
   @apply py-1 my-1 pl-px
          dark:text-neutral-200;
 
-  &.active {
+  &[active] {
     @apply bg-neutral-200/80 rounded-[4px]
          dark:bg-neutral-700/70 ;
   }
