--- a/elements/icon-link/icon-link.css
+++ b/elements/icon-link/icon-link.css
@@ -1,7 +1,7 @@
 .link-container {
-  @apply font-semibold text-base 
-         leading-none 
-         rounded-[4px] 
+  @apply font-medium
+         text-sm sm:text-base lg:text-lg
+         rounded-[4px] leading-none 
          stroke-black dark:stroke-white;
 
   &:hover {
@@ -10,9 +10,13 @@
   }
 
 }
+
 a {
-  @apply py-1 my-1 pl-px
-         dark:text-neutral-200;
+  @apply dark:text-neutral-200 
+          space-x-1.5 md:space-x-3
+          my-1 py-1 pl-1.5 pr-1
+          sm:my-1.5 sm:pl-2
+          md:py-1.5 md:mr-1.5;
 
   &[active] {
     @apply bg-neutral-200/80 rounded-[4px]
