--- a/index.css
+++ b/index.css
@@ -8,9 +8,9 @@
 
   html, body {
     @apply font-sans w-full h-full m-0 p-0
+          dark:text-neutral-100 text-neutral-900
           bg-white dark:bg-neutral-900;
   }
-
 
 
 }
